--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,26 @@ edition = "2021"
 
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.17"
+tokio-stream = "0.1"
 
 futures-channel = "0.3"
 futures-util = "0.3"
 
+async-stream = "0.2"
+async-channel = "1.6"
+async-trait = "0.1"
+
 anyhow = "1.0.57"
 log = "0.4.17" 
+
+solana-sdk = "1.10.13"
+solana-logger = "=1.10.13"
+solana-client = "=1.10.13"
+solana-rpc = "1.10.13"
+solana-account-decoder = "1.10.13"
+
+serde = "1.0.130"
+serde_json = "1.0.68"
+
+jsonrpc-core = "18.0.0"
+jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }
